--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
+    "@types/node": "^17.0.29",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.4"
   }
