--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@chakra-ui/react": "^1.8.8",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@fontsource/ibm-plex-sans": "^4.5.13",
+    "@fontsource/raleway": "^4.5.12",
     "framer-motion": "^6.3.0",
     "next": "12.1.4",
     "react-dom": "18.0.0",
