--- a/package.json
+++ b/package.json
@@ -9,20 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^1.1.7",
-    "@chakra-ui/react": "^1.8.8",
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "@fontsource/ibm-plex-sans": "^4.5.13",
-    "@fontsource/raleway": "^4.5.12",
-    "framer-motion": "^6.3.0",
-    "next": "12.1.4",
-    "react-dom": "18.0.0",
-    "react-icons": "^4.7.1"
+    "@chakra-ui/icons": "^2.1.0",
+    "@chakra-ui/react": "^2.8.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/ibm-plex-sans": "^5.0.3",
+    "@fontsource/raleway": "^5.0.3",
+    "framer-motion": "^10.16.0",
+    "next": "^15.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0"
   },
   "devDependencies": {
-    "@types/node": "^17.0.29",
-    "eslint": "8.12.0",
-    "eslint-config-next": "12.1.4"
+    "@types/node": "^20.17.16",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^15.0.0",
+    "typescript": "^5.7.3"
   }
 }
