--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/ibm-plex-sans": "^5.0.3",
     "@fontsource/raleway": "^5.0.3",
+    "fast-xml-parser": "^4.5.1",
     "framer-motion": "^10.16.0",
     "next": "^15.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "tmx-parser": "^1.5.0"
   },
   "devDependencies": {
     "@types/node": "^20.17.16",
