--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "next": "^15.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.12.0",
-    "tmx-parser": "^1.5.0"
+    "react-icons": "^4.12.0"
   },
   "devDependencies": {
     "@types/node": "^20.17.16",
