--- a/package.json
+++ b/package.json
@@ -15,17 +15,21 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/ibm-plex-sans": "^5.0.3",
     "@fontsource/raleway": "^5.0.3",
+    "@react-three/drei": "^9.121.4",
+    "@react-three/fiber": "^8.17.12",
     "fast-xml-parser": "^4.5.1",
     "framer-motion": "^10.16.0",
     "next": "^15.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "three": "^0.172.0"
   },
   "devDependencies": {
     "@types/node": "^20.17.16",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+    "@types/three": "^0.172.0",
     "eslint": "^8.56.0",
     "eslint-config-next": "^15.0.0",
     "typescript": "^5.7.3"
