--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-three/fiber": "^8.17.12",
     "fast-xml-parser": "^4.5.1",
     "framer-motion": "^10.16.0",
+    "jsnes": "^1.2.1",
     "next": "^15.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
