--- a/package.json
+++ b/package.json
@@ -15,15 +15,22 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/ibm-plex-sans": "^5.0.3",
     "@fontsource/raleway": "^5.0.3",
+    "@radix-ui/react-slot": "^1.1.1",
     "@react-three/drei": "^9.121.4",
     "@react-three/fiber": "^8.17.12",
+    "@tailwindcss/postcss": "^4.0.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "fast-xml-parser": "^4.5.1",
-    "framer-motion": "^10.16.0",
+    "framer-motion": "^10.18.0",
     "jsnes": "^1.2.1",
+    "lucide-react": "^0.474.0",
     "next": "^15.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7",
     "three": "^0.172.0"
   },
   "devDependencies": {
@@ -31,8 +38,11 @@
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@types/three": "^0.172.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.56.0",
     "eslint-config-next": "^15.0.0",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.7.3"
   }
 }
