--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@react-three/drei": "^9.121.4",
     "@react-three/fiber": "^8.17.12",
+    "@react-three/postprocessing": "^2.19.1",
     "@tailwindcss/postcss": "^4.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "fast-xml-parser": "^4.5.1",
     "framer-motion": "^10.18.0",
+    "html2canvas": "^1.4.1",
     "jsnes": "^1.2.1",
     "lucide-react": "^0.474.0",
     "next": "^15.0.0",
